<resources>
  <string name="app_name" translatable="false">tw_android_train</string>
  <string name="msg_button1">button 1</string>
  <string name="msg_button2">button 2</string>
  <string name="msg_button3">button 3</string>
  <string name="msg_button4">button 4</string>
  <string name="msg_button5">button 5</string>
  <string name="msg_button6">button 6</string>
  <string name="msg_button7">button 7</string>
  <string name="msg_button8">button 8</string>
  <string name="msg_button9">button 9</string>
  <string name="msg_button10">button 10</string>
  <string name="msg_android_practice">Android practice</string>
  <string name="msg_hello" translatable="false">Hello!</string>
  <string name="msg_signup" translatable="false">Signup</string>
  <string name="msg_login" translatable="false">Login</string>
  <string name="msg_fragment" translatable="false">my fragment</string>
  <string name="constrain_layout" translatable="false">constrain_layout</string>
  <string name="username" translatable="false">Username</string>
  <string name="password" translatable="false">Password</string>
  <string name="remember_me" translatable="false">Remember me</string>
  <string name="forgot_password" translatable="false">Forgot password?</string>
  <string name="or_content_with" translatable="false">or content with</string>
  <string name="msg_pick_contact" translatable="false">pick contact</string>
  <string name="msg_android" translatable="false">Android</string>
  <string name="msg_java" translatable="false">Java</string>
  <string name="msg_recyclerview" translatable="false">Recyclerview</string>
  <string name="content_android" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
  <string name="content_java" translatable="false">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
  <string name="to_the_bottom" translatable="false">to the bottom</string>
</resources>