<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center_horizontal">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/msg_android_practice"/>

      <Button
        android:id="@+id/btn_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/constrain_layout"
        android:layout_marginTop="70dp"
        style="@style/button" />

      <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_login"
        style="@style/button"/>

      <Button
        android:id="@+id/btn_pick_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_pick_contact"
        style="@style/button"/>

      <Button
        android:id="@+id/btn_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button4"
        style="@style/button"/>

      <Button
        android:id="@+id/btn_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_recyclerview"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button5"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button6"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button7"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button8"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button9"
        style="@style/button"/>

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button10"
        style="@style/button"/>

    </LinearLayout>
  </ScrollView>
</FrameLayout>