<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/msg_hello"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="50dp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/github"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

  <Button
    android:id="@+id/btn_signup"
    android:layout_width="0dp"
    android:layout_height="65dp"
    android:text="@string/msg_signup"
    android:layout_marginBottom="20dp"
    android:backgroundTint="@color/gray"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textAllCaps="false"
    app:layout_constraintBottom_toTopOf="@+id/btn_login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintWidth_percent="0.65"/>

  <Button
    android:id="@+id/btn_login"
    android:layout_width="0dp"
    android:layout_height="65dp"
    android:text="@string/msg_login"
    android:layout_marginBottom="50dp"
    android:backgroundTint="@color/gray"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintWidth_percent="0.65"/>


</androidx.constraintlayout.widget.ConstraintLayout>